--- a/custom_components/froeling_lambdatronic_modbus/translations/en.json
+++ b/custom_components/froeling_lambdatronic_modbus/translations/en.json
@@ -217,34 +217,34 @@
       "kollektor_vorlauftemperatur": {
         "name": "Collector Flow Temperature"
       },
-      "Kollektortemperatur": {
+      "kollektortemperatur": {
         "name": "Collector Temperature"
       },
-      "Solarfuehler_Puffer_oben": {
+      "solarfuehler_puffer_oben": {
         "name": "Solar Sensor Buffer Top"
       },
-      "Solarfuehler_Puffer_unten": {
+      "solarfuehler_puffer_unten": {
         "name": "Solar Sensor Buffer Bottom"
       },
-      "Laufzeit_Kollektorpumpe": {
+      "laufzeit_kollektorpumpe": {
         "name": "Collector Pump Running Time"
       },
-      "Aktuelle_Leistung_des_Solar_WMZ": {
+      "aktuelle_leistung_des_solar_wmz": {
         "name": "Current Power of the Solar WMZ"
       },
-      "Ansteuerung_Kollektorpumpe": {
+      "ansteuerung_kollektorpumpe": {
         "name": "Collector Pump Control"
       },
-      "Aktuelle_Ansteuerung_der_Kollektor_Boiler_Pumpe": {
+      "aktuelle_ansteuerung_der_kollektor_boiler_pumpe": {
         "name": "Current Control of the Collector-Boiler Pump"
       },
-      "Solarthermie_DFL_Sensor": {
+      "solarthermie_dfl_sensor": {
         "name": "Solar Thermal DFL Sensor"
       },
-      "Solarthermie_Tagesertrag": {
+      "solarthermie_tagesertrag": {
         "name": "Solar Thermal Daily Yield"
       },
-      "Solarthermie_Gesamtertrag": {
+      "solarthermie_gesamtertrag": {
         "name": "Solar Thermal Total Yield"
       }
     },
