Add sensor definition and translations for 'stunden_im_scheitholzbetrieb'

--- a/custom_components/froeling_lambdatronic_modbus/translations/de.json
+++ b/custom_components/froeling_lambdatronic_modbus/translations/de.json
@@ -222,6 +222,9 @@
       "stunden_im_heizen": {
         "name": "Stunden im Heizen"
       },
+      "stunden_im_scheitholzbetrieb": {
+        "name": "Stunden im Scheitholzbetrieb"
+      },
       "kollektor_ruecklauftemperatur": {
         "name": "Kollektor Rücklauftemperatur"
       },
